fixed issues related to swagger annotations
